@@ -1,5 +1,11 @@
 2004-09-16  Jerry Quinn  <jlquinn@optonline.net>
 
+	* java/awt/image/SinglePixelPackedSampleModel.java
+	(SinglePixelPackedSampleModel): Throw exception for unsupported
+	datatype.
+
+2004-09-16  Jerry Quinn  <jlquinn@optonline.net>
+
 	* java/awt/image/ColorModel.java (getDataElement): Implemented.
 	Update javadoc.
 	(getDataElements): Add missing version.  Remove bogus version.
